[package]
name = "actix-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.4.0"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"