[package]
name = "actix-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"
log = "0.4"
env_logger = "0.6"
envy = "0.3.3"